# aws-billing-notification

./: .env.example  .gitignore  .prettierignore  README.md  cdktf.json  config.ts  main.ts  package-lock.json  package.json
.github/workflow/: terraform-check.yml
.github/workflows/: terraform-check.yml  terragrunt-apply.yml  terragrunt-check.yml
src/assets/billing-notifier/: Cargo.toml
src/assets/billing-notifier/src/: ce.rs  main.rs
src/cost-explorer/: Cargo.toml
src/cost-explorer/src/: ce.rs
src/lib/: archive.ts  backend.ts  eventbridge.ts  iam.ts  index.ts  lambda.ts  provider.ts  tags.ts
src/stacks/: billing-notification.ts  lambda-stack.ts
src/util/: index.ts
terraform/: terragrunt.hcl
terraform/environments/prod/: env.hcl
terraform/environments/prod/lambda/: terragrunt.hcl
terraform/modules/iam/: iam.tf  main.tf  outputs.tf
terraform/modules/iam/files/template/: billing_notification_iam_policy.json.tpl  default_iam_assume_role.json.tpl
terraform/modules/lambda/: README.md  cloudwatch.tf  data.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  lambda_layer.tf  main.tf  outputs.tf  terragrunt.hcl  variables.tf
terraform/modules/lambda/files/app/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
terraform/modules/lambda/files/app/notify_aws_billing/: app.py  main.py
terraform/modules/lambda/files/app/notify_aws_billing/config/: logger.py
terraform/modules/lambda/files/function/source/: app.py
terraform/resources/lambda/function/: README.md
terraform/resources/lambda/permission/: README.md
(+6 files in other folders)
