[package]
name = "billing-notifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"

[dependencies]
aws-config = "1.2.1"
aws-sdk-costexplorer = "1.23.0"
chrono = "0.4"
lambda_runtime = "0.11.1"
rust_decimal = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log", "std"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
